GAMS Transfer R
==================
- fixed bug with library unload upon read or write
- Breaking: removed all `Const*` classes. `ConstContainer` is no longer supported. Use `Container` instead.

GAMS Transfer R v1.18.0
==================
- Symbol method `isValid` now checks also for scalars with more than one record entries
- bug fix in symbol `description`
- added `isScalar` property for the symbols of type `Variable` and `Equation`
- Symbol method `getCardinality` is removed
- Updated symbol method `reorderUELs()`. If the argument `uels` is not passed UELs are reordered based on the records
- Symbol method `toDense()` now requires domain UELs and domain records to be in the same order and unused UELs in the domain (if any) at the end of the UEL list
- Fixed the display of long error messages
- bug fix in accessing Container symbols in a case-insensitive manner
- bug fix in the Container method `describeAliases`
- Container `read` preserves the domain type from the source and avoids domain linking by symbol name

GAMS Transfer R v1.16.0
==================
- added checks for singleton and multidimensional checksin `Symbol` method `isValid()`
- changed the default domain labels. User-specified domain labels are preserved if unique
- performance improvement in `Container` method `read`

GAMS Transfer R v1.14.0
==================
- Significant performance improvements to Container write method
- bug fix in Container read when reading a `Symbol` with unused UELs
- bug fix in `todense` method for `Symbol`

GAMS Transfer R v1.12.0
==================
- released for MacOS ARM64
- bug fix in writing empty container
- added `Symbol` method `copy` to copy symbol from one `Container` or `ConstContainer` to another `Container`
- added `Container` and `ConstContainer` method `copy` to copy symbols from to another
- bug fix in using ConstContainer Alias methods when the aliased parent set is absent

GAMS Transfer R v1.10.0
==================
- performance improvement in read